--- a/Web/myStyleSheet.css
+++ b/Web/myStyleSheet.css
@@ -45,6 +45,11 @@ body{
 
 }
 
-
-
+.noselect {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
