--- a/Web/myStyleSheet.css
+++ b/Web/myStyleSheet.css
@@ -1,6 +1,17 @@
+html *
+{
+
+    cursor:none;
+}
+
+
+
+
 body{
     background-color: #AFAFAF;
 }
+
+
 
 /* Formatting for the main puzzle window */
 .puzzle{
