--- a/Web/myStyleSheet.css
+++ b/Web/myStyleSheet.css
@@ -1,6 +1,13 @@
+
+
+
+
+
 body{
     background-color: #AFAFAF;
 }
+
+
 
 /* Formatting for the main puzzle window */
 .puzzle{
@@ -39,8 +46,17 @@ body{
 
 }
 
+#mobile{
+    opacity: 0.0;
 
 
+}
 
-
+.noselect {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
